--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -3,6 +3,44 @@
   color: white;
   text-align: center;
   padding: 20px 0 20px 0;
-  z-index: 2;
-  margin-top: 2em;
+  /* z-index: 1; */
+  /* margin-top: 2em; */
+}
+.rowhidebelowtablet {
+  display: flex;
+  margin: auto;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+.col {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  justify-content: space-between;
+}
+h3 {
+  border-bottom: 1px solid white;
+  padding: 2px;
+  font-family: 'Montserrat';
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+
+@media (min-width: 376px) and (max-width: 820px) {
+  .rowhidebelowtablet {
+    flex-direction: column;
+  }
+}
+@media (max-width: 375px) {
+  .rowhidebelowtablet {
+    flex-direction: column;
+  }
 }
