--- a/src/css/IncomeTaxCalculator.css
+++ b/src/css/IncomeTaxCalculator.css
@@ -1,6 +1,7 @@
 .calculator-heading{
     font-family: 'Montserrat', sans-serif;
     padding: 30px 0px;
+    text-align: center;
 }
 
 #incometax-form{
