--- a/src/css/FAQ.css
+++ b/src/css/FAQ.css
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, h5, h6 {
+/* h1, h2, h3, h4, h5, h6 {
     color: #4d4d4d;
     font-weight: bold;
 }
@@ -135,4 +135,4 @@ h3 {
     }
     b {
         font-weight: bolder;
-    }
+    } */
