--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,4 +1,6 @@
-.top-nav {
+
+
+ .top-nav {
   display: flex;
   justify-content: space-evenly;
   text-align: center;
@@ -10,45 +12,48 @@
   position: sticky;
   top:0;
   z-index: 1;
-
 }
+
 .reg-nav {
   color: rgb(7, 7, 7);
   width: 50%;
-  justify-content:space-around;
+  justify-content: space-around;
   margin-right: 250px;
 }
+
 .link-div {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   gap: 1px;
-  /* margin-top: 15px; */
   color: rgb(0, 0, 0);
   align-items: center;
   width: 40%;
   font-weight: 600;
 }
+
 .link {
   color: rgb(2, 0, 0);
   text-decoration: none;
   font-size: 1em;
 }
+
 .top-nav-II {
   display: flex;
   justify-content: space-around;
   background-color: #DCF1F6;
   align-items: center;
   padding: 15px;
-  
 }
+
 .top-nav-III {
   display: flex;
   justify-content: space-around;
   gap: 15px;
   height: 100%;
-margin-left: 200px;
+  margin-left: 200px;
 }
+
 .anch {
   color: rgb(2, 0, 0);
   text-decoration: none;
@@ -57,6 +62,7 @@ margin-left: 200px;
   margin-left: 0.2em;
   padding: 5px;
 }
+
 .logo-img {
   width: 221px;
   vertical-align: center;
@@ -65,6 +71,7 @@ margin-left: 200px;
   align-items: center;
   margin-right: 300px;
 }
+
 .getstart {
   width: auto;
   height: 30px;
@@ -74,17 +81,66 @@ margin-left: 200px;
   border-radius: 5px;
 }
 
-
-
-@media (min-width: 376px) and (max-width: 820px) {
+/* Media query for medium-sized screens */
+@media (max-width: 820px) {
+  .top-nav {
+    justify-content: space-between; /* Adjust the spacing of elements */
+  }
   
+  .reg-nav {
+    width: 40%; /* Reduce the width */
+    margin-right: 0; /* Remove the right margin */
+  }
   
+  .link-div {
+    width: 60%; /* Increase the width */
+  }
+  
+  .logo-img {
+    margin-right: 0; /* Remove the right margin */
+  }
+  
+  .top-nav-III {
+    margin-left: 0; /* Remove the left margin */
+  }
 }
 
-
+/* Media query for small screens */
 @media (max-width: 375px) {
+  .reg-nav {
+    display: none; /* Hide the registration section on small screens */
+  }
   
+  .link-div {
+    justify-content: center; /* Center align the links */
+    width: 100%; /* Occupy full width */
+    margin-top: 15px; /* Add some margin at the top */
+  }
   
+  .link {
+    font-size: 0.9em; /* Reduce the font size */
+  }
+  
+  .top-nav-II {
+    flex-direction: column; /* Stack the elements vertically */
+    padding: 10px; /* Adjust the padding */
+  }
+  
+  .top-nav-III {
+    gap: 10px; /* Reduce the gap between elements */
+    margin-left: 0; /* Remove the left margin */
+  }
+  
+  .anch {
+    font-size: 16px; /* Reduce the font size */
+    padding: 3px; /* Adjust the padding */
+  }
+  
+  .logo-img {
+    margin-bottom: 10px; /* Reduce the margin at the bottom */
+  }
+  
+  .getstart {
+    display: none; /* Hide the "GET STARTED" button on small screens */
+  }
 }
-
-
