--- a/src/css/CapitalGainsCalculator.css
+++ b/src/css/CapitalGainsCalculator.css
@@ -1,6 +1,14 @@
+.capitalgains-tax-calci{
+    background-color: #dcf1f6;
+    padding: 40px 0px;
+}
+
 .calculator-heading{
     font-family: 'Montserrat', sans-serif;
     text-align: center;
+    font-size: 34px;
+    font-weight: 700;
+    color: #444444;
 }
 
 .sub-calc{
@@ -15,13 +23,18 @@
     width: 40%;
     margin: auto;
     padding: 30px 30px;
-    background-color: rgb(239, 239, 239);
+    /* background-color: rgb(239, 239, 239); */
+    background-color: rgba(244, 244, 244, 0.8);
+    border-radius: 20px;
 }
 
 .calc-subheading{
     font-family: 'Montserrat', sans-serif;
     margin: 70px 0px 30px 0px;
     text-align: center;
+    font-size: 26px;
+    font-weight: 700;
+    color: #444444;
 }
 
 .calculator-label > .calculator-fields{
@@ -43,9 +56,15 @@
     margin: 20px auto;
     padding: 10px;
     font-size: 20px;
-    background-color: #444444;
+    /* background-color: #444444; */
+    background-color: #2AA12E;;
     border: none;
     color: white;
+}
+
+.calculate-btn:hover {
+    background-color: #0069d9;
+    cursor: pointer;
 }
 
 .calculations{
@@ -59,12 +78,27 @@
     font-weight: 500;
     text-align: left;
     font-size: 20px;
+    border-bottom: none;
 }
 
 .calculated-tax{
     color: #444444;
     font-size: 35px;
     margin-left: 20px;
+}
+
+.e-pay-tax{
+    color: white;
+    background-color: #2AA12E;
+    border-radius: 6px;
+    padding: 10px 30px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.e-pay-tax:hover{
+    background-color: #0069d9;
+    cursor: pointer;
 }
 
 
