--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -32,7 +32,15 @@ h3 {
 a {
   text-decoration: none;
   color: white;
-}
+} 
+ .social-container{
+  display: flex;
+  width:15%;
+  justify-content: space-between;
+  margin:25px auto;
+  font-size: 20px;
+  
+} 
 
 @media (min-width: 376px) and (max-width: 820px) {
   .rowhidebelowtablet {
