--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -346,6 +346,15 @@ form {
 
 
 /* Media Queries for responsiveness */
+@media screen and (min-width:768px) and (max-width:1225px) {
+  .form-container {
+    position: static;
+    margin-top: 20px;
+    right: auto;
+    width: 100%;
+  }
+  
+}
 
 @media screen and (max-width: 768px) {
   .form-container {
